--- a/spotify-capsule-app/package.json
+++ b/spotify-capsule-app/package.json
@@ -12,7 +12,9 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "next": "13.0.4",
+    "next-auth": "^4.17.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "spotify-web-api-node": "^5.0.2"
   }
 }
