--- a/spotify-capsule-app/package.json
+++ b/spotify-capsule-app/package.json
@@ -16,14 +16,13 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "@mui/x-date-pickers": "^5.0.8",
+    "dayjs": "^1.11.6",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "next": "13.0.4",
-
     "next-auth": "^4.17.0",
-
     "prop-types": "^15.8.1",
-
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "spotify-web-api-node": "^5.0.2"
