--- a/spotify-capsule-app/package.json
+++ b/spotify-capsule-app/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.6",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "isarray": "^2.0.5",
     "next": "13.0.4",
     "next-auth": "^4.17.0",
     "prop-types": "^15.8.1",
